fix:search sidenav spacing too big with mobile menu

--- a/Frontend/src/app/modules/search/search.component.scss
+++ b/Frontend/src/app/modules/search/search.component.scss
@@ -739,7 +739,7 @@ div.dialog.darken {
         margin-bottom: $mobileTabNavHeight;
     }
     .sidenav{
-        height: calc(100% - #{$mainnavHeight} - #{$mobileTabNavHeight} - 180px);
+        height: calc(100% - #{$mainnavHeight} - #{$mobileTabNavHeight} - 105px);
     }
     .sidenavNoRepositories{
         height: calc(100% - #{$mainnavHeight} - #{$mobileTabNavHeight} - 65px - 70px);
